--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </head>
 
 <body>
-    <header class="container mx-auto px-4 my-12">
+    <header class="container mx-auto">
         <!-- navigation bar -->
-        <nav>
-            <div class="navbar bg-back-color text-white p-5 rounded-full">
+        <nav class="my-12 md:px-4">
+            <div class="navbar md:bg-back-color md:text-white md:p-5 rounded-full">
                 <div class="navbar-start">
                     <div>
                         <div class="dropdown">
@@ -85,7 +85,41 @@
                 </div>
             </div>
         </nav>
-        <!-- ======================================================================== -->
+        <!-- ====== end ===== -->
+
+        <!-- banner section -->
+        <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="./images/banner1.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="./images/banner2.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="./images/banner3.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+              <img src="./images/banner4.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+
+        <!-- ====== end ===== -->
     </header>
 
     <main>
