--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         <!-- ====== end ===== -->
 
         <!-- banner section -->
-        <div class="carousel w-full">
+        <section class="px-4">
+        <div class="carousel w-full rounded">
             <div id="slide1" class="carousel-item relative w-full">
               <img src="./images/banner1.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -118,7 +119,7 @@
               </div>
             </div>
           </div>
-
+        </section>
         <!-- ====== end ===== -->
     </header>
 
