changed banner btn style with custom css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     colors: {
                         clifford: '#da373d',
                         'back-color': '#F85559',
-                        'nav-color': '#121212',
+                        'dark-color': '#121212',
                     }
                 }
             }
