--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
         <!-- banner section -->
         <section class="px-4">
-            <div class="carousel w-full rounded">
+            <div class="carousel w-full rounded-lg">
+                <!-- first slide -->
                 <div id="slide1" class="carousel-item relative w-full">
-                    <!-- <img src="./images/banner1.png" class="w-full" /> -->
                     <div class="hero " style="background-image: url(./images/banner1.png);">
                         <div class="hero-overlay bg-opacity-60"></div>
                         <div class="hero-content text-center text-white font-bold">
@@ -103,28 +103,63 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
                 </div>
+
+                <!-- second slide -->
                 <div id="slide2" class="carousel-item relative w-full">
-                    <img src="./images/banner2.png" class="w-full" />
+                    <div class="hero " style="background-image: url(./images/banner2.png);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content text-center text-white font-bold">
+                            <div class="max-w-[680px]">
+                                <h1 class="mb-5 text-3xl md:text-7xl font-extrabold">Exotic tastes at your doorstep</h1>
+                                <p class="mb-5 font-normal text-sm md:text-lg">We supply highly quality organic products</p>
+                                <button class="btn border-none bg-[#F85559] text-white capitalize text-base px-7">Shop
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
                 </div>
+
+                <!-- third slide -->
                 <div id="slide3" class="carousel-item relative w-full">
-                    <img src="./images/banner3.png" class="w-full" />
+                    <div class="hero " style="background-image: url(./images/banner3.png);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content text-center text-white font-bold">
+                            <div class="max-w-[680px]">
+                                <h1 class="mb-5 text-3xl md:text-7xl font-extrabold">Exotic tastes at your doorstep</h1>
+                                <p class="mb-5 font-normal text-sm md:text-lg">We supply highly quality organic products</p>
+                                <button class="btn border-none bg-[#F85559] text-white capitalize text-base px-7">Shop
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide4" class="btn btn-circle">❯</a>
                     </div>
                 </div>
+
+                <!-- fourth slide -->
                 <div id="slide4" class="carousel-item relative w-full">
-                    <img src="./images/banner4.png" class="w-full" />
+                    <div class="hero " style="background-image: url(./images/banner4.png);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content text-center text-white font-bold">
+                            <div class="max-w-[680px]">
+                                <h1 class="mb-5 text-3xl md:text-7xl font-extrabold">Exotic tastes at your doorstep</h1>
+                                <p class="mb-5 font-normal text-sm md:text-lg">We supply highly quality organic products</p>
+                                <button class="btn border-none bg-[#F85559] text-white capitalize text-base px-7">Shop
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
