added a fruits images section in banner

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- ====== end ===== -->
 
         <!-- banner section -->
-        <section class="px-4">
+        <section class="px-4 relative">
             <div class="carousel w-full rounded-lg">
                 <!-- first slide -->
                 <div id="slide1" class="carousel-item relative w-full">
@@ -166,11 +166,37 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Fruits images -->
+            <div class="hidden xl:block">
+            <div class="fruits w-[1196px] mx-auto py-12 px-16 flex items-center justify-between absolute -bottom-28 left-2/4 -translate-x-1/2">
+                <div class="text-center">
+                    <img src="./images/fruit1.png" alt="">
+                    <p>Grapes</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit2.png" alt="">
+                    <p>Grapes</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit3.png" alt="">
+                    <p>Grapes</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit4.png" alt="">
+                    <p>Grapes</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit5.png" alt="">
+                    <p>Grapes</p>
+                </div>
+            </div>
+        </div>
         </section>
         <!-- ====== end ===== -->
     </header>
 
-    <main>
+    <main class="h-44">
 
     </main>
 
