added deals of the day timer section

--- a/index.html
+++ b/index.html
@@ -196,8 +196,44 @@
         <!-- ====== end ===== -->
     </header>
 
-    <main class="h-44">
-
+    <main class="container mx-auto mt-60">
+        <!-- deals of the day section -->
+        <section class="px-4">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="mb-8 md:mb-0 mr-0 md:mr-8">
+                    <h2 class="text-5xl font-extrabold text-dark-color pb-6">Deals of the day</h2>
+                    <p class="text-base text-dark-color font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
+                <div>
+                    <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                        <div class="flex flex-col p-2 bg-neutral rounded-box text-neutral-content">
+                          <span class="countdown text-5xl font-bold">
+                            <span style="--value:15;"></span>
+                          </span>
+                          days
+                        </div> 
+                        <div class="flex flex-col p-2 bg-neutral rounded-box text-neutral-content">
+                          <span class="countdown font-mono text-5xl">
+                            <span style="--value:10;"></span>
+                          </span>
+                          hours
+                        </div> 
+                        <div class="flex flex-col p-2 bg-neutral rounded-box text-neutral-content">
+                          <span class="countdown font-mono text-5xl">
+                            <span style="--value:24;"></span>
+                          </span>
+                          min
+                        </div> 
+                        <div class="flex flex-col p-2 bg-neutral rounded-box text-neutral-content">
+                          <span class="countdown font-mono text-5xl">
+                            <span style="--value:30;"></span>
+                          </span>
+                          sec
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
