added responsive tailwind css to team section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             }
         }
     </script>
-    <!-- =========================== -->
+
+    <!-- fontawesome cdn -->
+    <script src="https://kit.fontawesome.com/bb64883375.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -263,14 +265,27 @@
                     <div class="w-60 h-[1px] bg-gray-300"></div>
                     <span>Apple</span>
                     <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
-                            <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
-                            <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
-                            <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
-                            <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
-                            <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
-                            <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24"
+                            fill="none">
+                            <path
+                                d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z"
+                                fill="#FBC0A8" />
+                        </svg>
                     </div>
                     <span class="text-lg text-back-color font-bold mt-3">Details</span>
                 </div>
@@ -280,14 +295,27 @@
                     <div class="w-60 h-[1px] bg-gray-300"></div>
                     <span>Orange</span>
                     <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
-                            <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
-                            <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
-                            <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
-                            <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
-                            <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
-                            <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24"
+                            fill="none">
+                            <path
+                                d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z"
+                                fill="#FBC0A8" />
+                        </svg>
                     </div>
                     <span class="text-lg text-back-color font-bold mt-3">Details</span>
                 </div>
@@ -297,14 +325,27 @@
                     <div class="w-60 h-[1px] bg-gray-300"></div>
                     <span>Red Dragon</span>
                     <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
-                            <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
-                            <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
-                            <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
-                            <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
-                            <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
-                            <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24"
+                            fill="none">
+                            <path
+                                d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z"
+                                fill="#FBC0A8" />
+                        </svg>
                     </div>
                     <span class="text-lg text-back-color font-bold mt-3">Details</span>
                 </div>
@@ -314,20 +355,95 @@
                     <div class="w-60 h-[1px] bg-gray-300"></div>
                     <span>Banana</span>
                     <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
-                            <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
-                            <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
-                            <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
-                            <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
-                            <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
-                            <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24"
+                            fill="none">
+                            <path
+                                d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z"
+                                fill="#F85559" />
+                            <path
+                                d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z"
+                                fill="#FBC0A8" />
+                            <path
+                                d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z"
+                                fill="#FBC0A8" />
+                        </svg>
                     </div>
                     <span class="text-lg text-back-color font-bold mt-3">Details</span>
                 </div>
             </div>
             <div class="text-center mt-12">
                 <button class="py-4 px-8 bg-back-color rounded-xl text-white">Shop all</button>
+            </div>
+        </section>
+        <!-- ====== end ===== -->
+
+        <!-- The team section -->
+        <section class="px-4">
+            <div class="hero rounded-lg" style="background-image: url(./images/banner1.png);">
+                <div class="hero-overlay"></div>
+                <div class="hero-content text-center text-neutral-content p-7 lg:py-32">
+                    <!-- title and info -->
+                    <div>
+                        <h1 class="mb-5 text-5xl font-bold text-white">Meet Our Team</h1>
+                        <p class="mb-8 text-white">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                        <div class="flex lg:gap-28 flex-wrap flex-col md:flex-row justify-center">
+                            <!-- member 1 -->
+                            <div class="text-center flex flex-col items-center">
+                                <img src="./images/member1.png" alt="" class="pb-6">
+                                <p class="text-2xl font-bold">Awlad Hossain</p>
+                                <p class="text-base pb-2">Fruits Expert</p>
+                                <div class="flex items-center justify-center gap-2">
+                                    <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/linkedin.svg" alt=""></i></a>
+                                </div>
+                            </div>
+                            <!-- member 2 -->
+                            <div class="text-center flex flex-col items-center">
+                                <img src="./images/member2.png" alt="" class="pb-6">
+                                <p class="text-2xl font-bold">Awlad Hossain</p>
+                                <p class="text-base pb-2">Fruits Expert</p>
+                                <div class="flex items-center justify-center gap-2">
+                                    <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/linkedin.svg" alt=""></i></a>
+                                </div>
+                            </div>
+                            <!-- member 3 -->
+                            <div class="text-center flex flex-col items-center">
+                                <img src="./images/member3.png" alt="" class="pb-6">
+                                <p class="text-2xl font-bold">Awlad Hossain</p>
+                                <p class="text-base pb-2">Fruits Expert</p>
+                                <div class="flex items-center justify-center gap-2">
+                                    <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/linkedin.svg" alt=""></i></a>
+                                </div>
+                            </div>
+                            <!-- member 4 -->
+                            <div class="text-center flex flex-col items-center">
+                                <img src="./images/member4.png" alt="" class="pb-6">
+                                <p class="text-2xl font-bold">Awlad Hossain</p>
+                                <p class="text-base pb-2">Fruits Expert</p>
+                                <div class="flex items-center justify-center gap-2">
+                                    <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
+                                    <a href="#"><img src="./images/icons/linkedin.svg" alt=""></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- team members -->
+                </div>
             </div>
         </section>
         <!-- ====== end ===== -->
