--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <!-- ====== end ===== -->
 
         <!-- The team section -->
-        <section class="px-4">
+        <section class="px-4 my-32">
             <div class="hero rounded-lg" style="background-image: url(./images/banner1.png);">
                 <div class="hero-overlay"></div>
                 <div class="hero-content text-center text-neutral-content p-7 lg:py-32">
@@ -395,7 +395,7 @@
                     <div>
                         <h1 class="mb-5 text-5xl font-bold text-white">Meet Our Team</h1>
                         <p class="mb-8 text-white">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
-                        <div class="flex lg:gap-28 flex-wrap flex-col md:flex-row justify-center">
+                        <div class="flex gap-8 lg:gap-28 flex-wrap flex-col md:flex-row justify-center">
                             <!-- member 1 -->
                             <div class="text-center flex flex-col items-center">
                                 <img src="./images/member1.png" alt="" class="pb-6">
