added footer and made it responsive

--- a/index.html
+++ b/index.html
@@ -449,8 +449,30 @@
         <!-- ====== end ===== -->
     </main>
 
-    <footer class="h-52">
-
+    <footer class="bg-dark-color py-36">
+        <div class="flex items-center gap-4 justify-center">
+            <img src="./images/logo.png" alt=""><span class="text-white text-5xl font-bold">Only Fruits</span>
+        </div>
+        <nav class="px-4">
+            <!-- navigation links -->
+            <ul class="flex flex-wrap text-white justify-center gap-6 lg:gap-16 my-14">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">All fruits</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">My Account</a></li>
+            </ul>
+            <!-- social media links -->
+            <ul class="flex text-white items-center justify-center gap-5 lg:gap-10">
+                <li><a href="#"><img src="./images/icons/twitter-2.svg" alt="" class="w-6 lg:w-auto"></a></li>
+                <li><a href="#"><img src="./images/icons/facebook-2.svg" alt="" class="w-6 lg:w-auto"></a></li>
+                <li><a href="#"><img src="./images/icons/youtube.svg" alt="" class="w-6 lg:w-auto"></a></li>
+                <li><a href="#"><img src="./images/icons/linkdin-2.svg" alt="" class="w-6 lg:w-auto"></a></li>
+                <li><a href="#"><img src="./images/icons/instagram.svg" alt="" class="w-6 lg:w-auto"></a></li>
+                <li><a href="#"><img src="./images/icons/apple.svg" alt="" class="w-6 lg:w-auto"></a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 
