--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
     <footer class="bg-dark-color py-36">
         <div class="flex items-center gap-4 justify-center">
-            <img src="./images/logo.png" alt=""><span class="text-white text-5xl font-bold">Only Fruits</span>
+            <img src="./images/logo.png" alt="" class="w-9 md:w-auto"><span class="text-white text-2xl md:text-5xl font-bold ">Only Fruits</span>
         </div>
         <nav class="px-4">
             <!-- navigation links -->
@@ -459,7 +459,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Shop</a></li>
-                <li><a href="#">All fruits</a></li>
+                <li><a href="#">All Fruits</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="#">My Account</a></li>
             </ul>
