--- a/index.html
+++ b/index.html
@@ -394,7 +394,8 @@
                     <!-- title and info -->
                     <div>
                         <h1 class="mb-5 text-5xl font-bold text-white">Meet Our Team</h1>
-                        <p class="mb-8 text-white">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                        <p class="mb-8 text-white">Contrary to popular belief, is not simply random text. It has roots
+                            in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
                         <div class="flex gap-8 lg:gap-28 flex-wrap flex-col md:flex-row justify-center">
                             <!-- member 1 -->
                             <div class="text-center flex flex-col items-center">
@@ -447,11 +448,82 @@
             </div>
         </section>
         <!-- ====== end ===== -->
+
+        <!-- Why Choose Us section -->
+        <section class="px-4 mb-32">
+            <div>
+                <h2 class="text-5xl font-bold text-black-color text-center">Why Choose Us</h2>
+                <p class="text-center mt-6 mb-12 text-base text-black-color">Contrary to popular belief, is not simply
+                    random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over
+                    2000 years old.</p>
+            </div>
+            <div class="text-black-color flex flex-col lg:flex-row items-center lg:items-start gap-10">
+                <!-- left part -->
+                <div class="order-2 md:order-1">
+                    <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8">
+                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li class="flex flex-col items-center md:items-start px-6 md:px-0">
+                            <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
+                            <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
+                            <p class="text-center md:text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </li>
+                    </ul>
+                    <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8 my-12">
+                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li class="flex flex-col items-center md:items-start px-6 md:px-0">
+                            <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
+                            <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
+                            <p class="text-center md:text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </li>
+                    </ul>
+                    <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8">
+                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li class="flex flex-col items-center md:items-start px-6 md:px-0">
+                            <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
+                            <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
+                            <p class="text-center md:text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- middle part -->
+                <div class="order-1 md:order-2">
+                    <img src="./images/whychoose1.png" alt="" class="w-auto lg:w-[700px]">
+                </div>
+                <!-- right part -->
+                <div class="order-3">
+                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">                        
+                        <li class="flex flex-col items-center md:items-end px-6 md:px-0">
+                            <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
+                            <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
+                            <p class="text-center md:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </li>
+                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                    </ul>
+                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8 py-12">                        
+                        <li class="flex flex-col items-center md:items-end px-6 md:px-0">
+                            <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
+                            <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
+                            <p class="text-center md:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </li>
+                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                    </ul>
+                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">                        
+                        <li class="flex flex-col items-center md:items-end px-6 md:px-0">
+                            <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
+                            <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
+                            <p class="text-center md:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </li>
+                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="bg-dark-color py-36">
         <div class="flex items-center gap-4 justify-center">
-            <img src="./images/logo.png" alt="" class="w-9 md:w-auto"><span class="text-white text-2xl md:text-5xl font-bold ">Only Fruits</span>
+            <img src="./images/logo.png" alt="" class="w-9 md:w-auto"><span
+                class="text-white text-2xl md:text-5xl font-bold ">Only Fruits</span>
         </div>
         <nav class="px-4">
             <!-- navigation links -->
