added comments for why choose us section

--- a/index.html
+++ b/index.html
@@ -451,12 +451,14 @@
 
         <!-- Why Choose Us section -->
         <section class="px-4 mb-32">
+            <!-- title and discription -->
             <div>
                 <h2 class="text-5xl font-bold text-black-color text-center">Why Choose Us</h2>
                 <p class="text-center mt-6 mb-12 text-base text-black-color">Contrary to popular belief, is not simply
                     random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over
                     2000 years old.</p>
             </div>
+            <!-- why choose us items -->
             <div class="text-black-color flex flex-col lg:flex-row items-center lg:items-start gap-10">
                 <!-- left part -->
                 <div class="order-2 md:order-1">
