changed font size for mobile of deals of the day section

--- a/index.html
+++ b/index.html
@@ -208,18 +208,18 @@
         <section class="px-4">
             <div class="flex flex-col lg:flex-row justify-between items-center">
                 <div class="mb-8 lg:mb-0 mr-0 md:mr-8">
-                    <h2 class="text-5xl font-extrabold text-dark-color pb-6">Deals of the day</h2>
-                    <p class="text-base text-dark-color font-normal">Contrary to popular belief, is not simply random
+                    <h2 class="text-3xl md:text-5xl font-extrabold text-dark-color pb-6 text-center md:text-left">Deals of the day</h2>
+                    <p class="text-base text-dark-color font-base text-center md:text-left opacity-75">Contrary to popular belief, is not simply random
                         text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000
                         years old.</p>
                 </div>
-                <div>
+                <div class="px-4">
                     <div class="grid grid-flow-col gap-2 lg:gap-4 text-center auto-cols-max text-dark-color">
                         <div class="flex flex-col">
-                            <span class="countdown text-5xl font-extrabold pb-2">
+                            <span class="countdown text-3xl md:text-5xl font-extrabold pb-2">
                                 <span style="--value:29;"></span>
                             </span>
-                            <span class="opacity-70">Days</span>
+                            <span class="opacity-70 text-sm md:text-base">Days</span>
                         </div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path
@@ -227,10 +227,10 @@
                                 stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                         <div class="flex flex-col">
-                            <span class="countdown text-5xl font-extrabold pb-2">
+                            <span class="countdown text-3xl md:text-5xl font-extrabold pb-2">
                                 <span style="--value:15;"></span>
                             </span>
-                            <span class="opacity-70">Hours</span>
+                            <span class="opacity-70 text-sm md:text-base">Hours</span>
                         </div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path
@@ -238,10 +238,10 @@
                                 stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                         <div class="flex flex-col">
-                            <span class="countdown text-5xl font-extrabold pb-2">
+                            <span class="countdown text-3xl md:text-5xl font-extrabold pb-2">
                                 <span style="--value:25;"></span>
                             </span>
-                            <span class="opacity-70">Minutes</span>
+                            <span class="opacity-70 text-sm md:text-base">Minutes</span>
                         </div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path
@@ -249,10 +249,10 @@
                                 stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                         <div class="flex flex-col">
-                            <span class="countdown text-5xl font-extrabold pb-2">
+                            <span class="countdown text-3xl md:text-5xl font-extrabold pb-2">
                                 <span style="--value:08;"></span>
                             </span>
-                            <span class="opacity-70">Seconds</span>
+                            <span class="opacity-70 text-sm md:text-base">Seconds</span>
                         </div>
                     </div>
                 </div>
